unpackaged/main/default/objects/Advisor_Group_Member__c/Advisor_Group_Member__c.object-meta.xml
<CustomObject>
    <label>Branch Member</label>
    <nameField>
        <displayFormat>BM-{00000}</displayFormat>
        <label>Branch Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branch Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>