unpackaged/main/default/objects/Advisor_Group_Member__c/fields/Advisor_Group__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Group__c</fullName>
    <label>Branch</label>
    <referenceTo>Advisor_Group__c</referenceTo>
    <relationshipLabel>Branch Members</relationshipLabel>
    <relationshipName>Advisor_Group_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>