unpackaged/main/default/objects/Advisor_Group_Member__c/fields/AGM_ID__c.field-meta.xml
<CustomField>
    <fullName>AGM_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>AGM ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>