unpackaged/main/default/objects/Advisor_Group_Member__c/fields/Diversify_Related_Person__c.field-meta.xml
<CustomField>
    <fullName>Diversify_Related_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diversify Related Person</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Diversify Related Person</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Branch Members</relationshipLabel>
    <relationshipName>Advisor_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>